--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,5 +1,5 @@
 body {
-	padding-top: 70px;
+	padding: 70px 0;
 	font-family: 'Microsoft Yahei';
 }
 
@@ -9,11 +9,6 @@ h1,h2,h3,h4,h5,h6 {
 
 .none {
 	display: none;
-}
-
-.main-container {
-	max-width: 800px;
-	margin: 0 auto;
 }
 
 .login {
@@ -42,57 +37,62 @@ h1,h2,h3,h4,h5,h6 {
 	margin-top: 20px;
 }
 
-.file-explorer-header {
-	padding: 15px;
-	background-color: #fff;
-	border-width: 1px;
-	border-color: #ddd;
-	border-radius: 4px 4px 0 0;
-	border-style: solid;
+.column {
+	display: inline-block;
+	vertical-align: top;
+	width: 250px;
+	margin: 0 70px;
 }
 
-.file-explorer > .breadcrumb {
-	border-radius: 0;
-	border-left: 1px solid #ddd;
-	border-right: 1px solid #ddd;
-	margin-bottom: 0;
+.last-column {
+	margin-right: 0;
 }
 
-.file-explorer-body {
-	background-color: #fff;
-	border-width: 1px;
-	border-color: #ddd;
-	border-radius: 0 0 4px 4px;
-	border-style: solid;
-	padding-bottom: 40px;
+.title {
+	margin: 1em 0;
+	font-size: 50px;
 }
 
-.file-explorer-body > table {
-	width: 100%;
+#file-explorer-container {
+	max-width: 710px;
+	margin: 0 auto;
 }
 
-.left-column {
-	border-bottom: 1px solid #ddd;
-	border-right: 1px solid #ddd;
+ul {
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
+	list-style: none;
 }
 
-.right-column {
-	border-bottom: 1px solid #ddd;
+ul > li {
+	margin-bottom: .5em;
 }
 
-.file-explorer-body > table > tbody > tr > td {
-	width: 50%;
+ul > li:hover {
+	/*background-color: rgb(215, 255, 247);*/
+	color: #888;
 }
 
-.file-explorer-body > table > tbody > tr > td:hover {
-	cursor: pointer;
-	background-color: #ddd;
+ul > li > span {
+	display: inline-block;
+	float: left;
+	width: 0;
+	direction: rtl;
 }
 
-.file-explorer-body table th {
-	padding: 8px 15px;
+ul > li > span > div {
+	color: #ddd;
+	white-space: nowrap;
+	padding-right: .5em;
 }
 
-.file-explorer-body table td {
-	padding: 8px 15px;
+ul > li > a {
+	border-left: 2px solid #ddd;
+	padding-left: .5em;
+}
+
+ul > li > a, ul > li > a:hover {
+	color: inherit;
+	text-decoration: none;
 }
