--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,5 +1,5 @@
 body {
-	padding: 70px 0;
+	padding-bottom: 70px;
 	font-family: 'Microsoft Yahei';
 }
 
@@ -65,7 +65,7 @@ ul {
 	list-style: none;
 }
 
-ul > li {
+ul.item-list > li,  ul.position-list > li{
 	margin-bottom: .5em;
 }
 
@@ -74,25 +74,53 @@ ul > li:hover {
 	color: #888;
 }
 
-ul > li > span {
+ul.item-list > li > span {
 	display: inline-block;
 	float: left;
 	width: 0;
 	direction: rtl;
 }
 
-ul > li > span > div {
+ul.item-list > li > span > div {
 	color: #ddd;
 	white-space: nowrap;
 	padding-right: .5em;
 }
 
-ul > li > a {
+ul.item-list > li > a {
 	border-left: 2px solid #ddd;
 	padding-left: .5em;
 }
 
-ul > li > a, ul > li > a:hover {
+ul.item-list > li > a, ul.item-list > li > a:hover {
 	color: inherit;
 	text-decoration: none;
+}
+
+/* 位置 */
+ul.position-list > li > a, ul.position-list > li > a:hover {
+	color: inherit;
+	text-decoration: none;
+}
+
+ul.position-list > li {
+	border-bottom: 1px solid #666;
+}
+
+ul.position-list > li:first-child {
+	border-top: 1px solid #666;
+}
+
+ul.position-list > li {
+	margin: 0;
+	padding: 0;
+	line-height: 2em;
+	padding-left: .5em;
+	background-color: #F7F7F7;
+	font-weight: bold;
+}
+
+ul.position-list li.current {
+	color: white;
+	background-color: rgb(0, 110, 153);
 }
