--- a/website/css/index.css
+++ b/website/css/index.css
@@ -70,7 +70,9 @@ ul {
 }
 
 ul.item-list > li,  ul.position-list > li{
+	line-height: 2em;
 	margin-bottom: .5em;
+	word-break: break-all;
 }
 
 ul > li:hover {
@@ -92,6 +94,7 @@ ul.item-list > li > span > div {
 }
 
 ul.item-list > li > a {
+	display: block;
 	border-left: 2px solid #ddd;
 	padding-left: .5em;
 }
@@ -101,10 +104,25 @@ ul.item-list > li > a, ul.item-list > li > a:hover {
 	text-decoration: none;
 }
 
+ul.item-list > li > a:active {
+	color: white;
+	background-color: #5bc0de;
+}
+
 /* 位置 */
+ul.position-list > li > a {
+	padding-left: .5em;
+	display: block;
+}
+
 ul.position-list > li > a, ul.position-list > li > a:hover {
 	color: inherit;
 	text-decoration: none;
+}
+
+ul.position-list > li > a:active {
+	color: white;
+	background-color: #5bc0de;
 }
 
 ul.position-list > li {
@@ -119,14 +137,13 @@ ul.position-list > li {
 	margin: 0;
 	padding: 0;
 	line-height: 2em;
-	padding-left: .5em;
 	background-color: #F7F7F7;
 	font-weight: bold;
 }
 
 ul.position-list li.current {
 	color: white;
-	background-color: rgb(0, 110, 153);
+	background-color: #5bc0de;
 }
 
 .config-block {
